--- a/management-report/markdown/subpage-demographics.Rmd
+++ b/management-report/markdown/subpage-demographics.Rmd
@@ -41,7 +41,8 @@ pds_all_age_rates$age_grp_2<- factor(pds_all_age_rates$age_grp_2, levels = c("79
 pds_all_age_rates %<>% complete(nesting(fy, geog), age_grp_2, fill = list(pop_rate_10000 = 0)) 
 
 pds_age_rates_2_data <- left_join(pds_all_age_rates,
-pds_all_age_rates %>% filter(geog == "Scotland") %>% select(fy, age_grp_2, pop_rate_10000) %>% rename(scot_pop_rate_10000 = pop_rate_10000))
+pds_all_age_rates %>% filter(geog == "Scotland") %>% select(fy, age_grp_2, pop_rate_10000) %>% rename(scot_pop_rate_10000 = pop_rate_10000)) %>% 
+  mutate(pop_rate_10000 = if_else(geog == "Scotland", NA, pop_rate_10000))
 
 #prepare gender data
 
@@ -82,7 +83,8 @@ pds_all_sex_rates$sex <- as.factor(pds_all_sex_rates$sex)
 pds_all_sex_rates %<>% complete(nesting(geog, fy), sex, fill = list(pop_est = NA, pop_rate_10000 = NA)) 
 
 pds_all_sex_rates <- left_join(pds_all_sex_rates,
-pds_all_sex_rates %>% filter(geog == "Scotland") %>% select(fy, sex, pop_rate_10000) %>% rename(scot_pop_rate_10000 = pop_rate_10000))
+pds_all_sex_rates %>% filter(geog == "Scotland") %>% select(fy, sex, pop_rate_10000) %>% rename(scot_pop_rate_10000 = pop_rate_10000))  %>% 
+  mutate(pop_rate_10000 = if_else(geog == "Scotland", NA, pop_rate_10000))
 
 pds_all_sex_rates$sex<- factor(pds_all_sex_rates$sex, levels = c("Male", "Female"))
 
@@ -124,15 +126,27 @@ pds_all_simd_rates$simd <- as.factor(pds_all_simd_rates$simd)
 pds_all_simd_rates %<>% complete(nesting(geog, fy), simd, fill = list(pop = NA, pop_rate_10000 = NA)) 
 
 pds_all_simd_rates <- left_join(pds_all_simd_rates,
-pds_all_simd_rates %>% filter(geog == "Scotland") %>% select(fy, simd, pop_rate_10000) %>% rename(scot_pop_rate_10000 = pop_rate_10000))
+pds_all_simd_rates %>% filter(geog == "Scotland") %>% select(fy, simd, pop_rate_10000) %>% rename(scot_pop_rate_10000 = pop_rate_10000))  %>% 
+  mutate(pop_rate_10000 = if_else(geog == "Scotland", NA, pop_rate_10000))
 
 #legend tibble
-legend_data <- tibble(
-  geog = c("Selected Health Board/Integration Authority Area", "Scotland"),
-  x = c(1,2),
-  y = c(0,0))
+legend_data_1 <- tibble(
+  geog = unique(pds_all$geog),
+  legend = c(" ", rep("Scotland",45)),
+  x = 1,
+  y = 0)
 
-legend_data$geog <- factor(legend_data$geog, levels = unique(legend_data$geog))
+legend_data_2 <- tibble(
+  geog = unique(pds_all$geog),
+  legend = unique(pds_all$geog),
+  x = 1,
+  y = 0)
+
+legend_data <- bind_rows(legend_data_2, legend_data_1) %>% filter(legend != " ")
+
+legend_data$legend <- factor(legend_data$legend, levels = c(unique(legend_data$legend)))
+
+legend_data$legend <-fct_relevel(legend_data$legend, "Scotland", after = Inf)
 
 # total referrals for tables
 hb_totals_table <- bind_rows(pds_scot_totals, pds_hb_totals) %>%
@@ -436,10 +450,12 @@ bscols(widths = c(1,5,NA),
 
 <h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 15px"> Number of people referred to PDS per 10,000 population by Age Group and Financial Year</h2> 
 ```{r plot-trend-age-legend-pop}
+legend_data_age<- SharedData$new(legend_data,
+  key = ~geog, group = "trend_age_pop")
 
 bscols(widths = 12,
        div(style = css(height="30px"),
-plot_rate_line_legend_1(legend_data)),NULL
+plot_rate_line_legend(legend_data_age)),NULL
 )
 
 ```
@@ -788,7 +804,8 @@ DT::datatable(hb_age_table_ldp, rownames = FALSE, selection = "none", #extension
 
 ```{r dropdown-ldp-age-trend}
 
-ldp_all_age_data <- SharedData$new(ldp_all_age, key = ~geog, group = "ldp_age")
+ldp_all_age_data <- SharedData$new(ldp_all_age %>% 
+  mutate(perc_met = if_else(geog == "Scotland", NA, perc_met)), key = ~geog, group = "ldp_age")
 
 data_filter_ldp_age <- filter_select(id = "filter_ldp_age",
                                     label = "Select Integration Authority Area or Health Board:",
@@ -807,9 +824,12 @@ bscols(widths = c(1,5,NA),
 
 <h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 15px">Percentage of referrals who received a minimum of one year’s PDS by Age Group and Financial Year</h2>
 ```{r plot-ldp-age-trend-legend}
+legend_data_age_ldp<- SharedData$new(legend_data,
+  key = ~geog, group = "ldp_age")
+
 bscols(widths = 12,
        div(style = css(height="30px"),
-plot_ldp_line_legend_1(legend_data)),NULL
+plot_ldp_line_legend(legend_data_age_ldp)),NULL
 )
 ```
 
@@ -1110,9 +1130,12 @@ bscols(widths = c(1,5,NA),
 
 <h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 15px"> Number of people referred to PDS per 10,000 population (65+) by Gender and Financial Year</h2>
 ```{r plot-trend-sex-legend-pop}
+legend_data_sex<- SharedData$new(legend_data,
+  key = ~geog, group = "trend_sex_pop")
+
 bscols(widths = 12,
        div(style = css(height="30px"),
-plot_rate_line_legend_1(legend_data)),NULL
+plot_rate_line_legend(legend_data_sex)),NULL
 )
 
 ```
@@ -1400,7 +1423,8 @@ DT::datatable(hb_sex_table_ldp, rownames = FALSE, selection = 'none',# extension
 
 ```{r dropdown-ldp-sex}
 
-ldp_all_sex_data <- SharedData$new(ldp_all_sex, key = ~geog, group = "ldp_sex")
+ldp_all_sex_data <- SharedData$new(ldp_all_sex %>% 
+  mutate(perc_met = if_else(geog == "Scotland", NA, perc_met)), key = ~geog, group = "ldp_sex")
 
 data_filter_ldp_sex <- filter_select(id = "filter_ldp_sex",
                                     label = "Select Integration Authority Area or Health Board:",
@@ -1419,9 +1443,12 @@ bscols(widths = c(1,5,NA),
 
 <h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 20px">Percentage of referrals who received a minimum of one year’s PDS by Gender and Financial Year </h2>
 ```{r plot-ldp-sex-legend}
+legend_data_sex_ldp<- SharedData$new(legend_data,
+  key = ~geog, group = "ldp_sex")
+
 bscols(widths = 12,
        div(style = css(height="30px"),
-plot_ldp_line_legend_1(legend_data)),NULL
+plot_ldp_line_legend(legend_data_sex_ldp)),NULL
 )
 
 ```
@@ -1791,10 +1818,12 @@ bscols(widths = c(1,5,NA),
 
 <h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 15px"> Number of people referred to PDS per 10,000 population (65+) by Deprivation Quintile and Financial Year</h2> 
 ```{r plot-trend-simd-legend-pop}
+legend_data_simd<- SharedData$new(legend_data,
+  key = ~geog, group = "trend_simd_pop")
 
 bscols(widths = 12,
        div(style = css(height="30px"),
-plot_rate_line_legend_1(legend_data)),NULL
+plot_rate_line_legend(legend_data_simd)),NULL
 )
 
 ```
@@ -2172,7 +2201,8 @@ DT::datatable(hb_simd_table_ldp, rownames = FALSE, selection = "none", #extensio
 
 ```{r dropdown-ldp-simd}
 
-ldp_all_simd_data <- SharedData$new(ldp_all_simd, key = ~geog, group = "ldp_simd")
+ldp_all_simd_data <- SharedData$new(ldp_all_simd %>% 
+  mutate(perc_met = if_else(geog == "Scotland", NA, perc_met)), key = ~geog, group = "ldp_simd")
 
 data_filter_ldp_simd <- filter_select(id = "filter_ldp_simd",
                                     label = "Select Integration Authority Area or Health Board:",
@@ -2191,9 +2221,12 @@ bscols(widths = c(1,5,NA),
 
 <h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 15px">Percentage of referrals who received a minimum of one year’s PDS by Deprivation Quintile and Financial Year </h2>
 ```{r plot-ldp-simd-legend}
+legend_data_simd_ldp<- SharedData$new(legend_data,
+  key = ~geog, group = "ldp_simd")
+
 bscols(widths = 12,
        div(style = css(height="30px"),
-plot_ldp_line_legend_1(legend_data)),NULL
+plot_ldp_line_legend(legend_data_simd_ldp)),NULL
 )
 
 ```
